# WebSearchMCP

./: .env.example  AGENTS.md  README.md  README_DEPLOY.md  SOTASearch.py  WebSearchMCP.py  WebSearchMCP_test.py  pyproject.toml  requirements.curl_cffi.txt  requirements.txt  test.py
aionly/: README.md  SOTASearch.py  test.py
aionlynew/: README.md  SOTASearch.py  pyproject.toml  regression_suite.py  requirements.txt
aionlynew/cases/: search_cases.json
deep-research/: SKILL.md
deep-research/agents/: openai.yaml
deep-research/templates/: contradiction-matrix.md  decision-log.md  evidence-ledger.md  hypothesis-map.md  iteration-log.md  research-plan.md  term-map.md
docs/: README_EN.md
iterative-web-research/: SKILL.md
iterative-web-research/agents/: openai.yaml
iterative-web-research/templates/: evidence-ledger.md  iteration-log.md  research-plan.md
normal/: .env.example  SOTASearch.py  pyproject.toml  requirements.txt  test.py
normalnew/: README.md  SOTASearch.py  pyproject.toml  requirements.txt  test.py
pro/: .gitignore  README.md  SOTASearch.py  pyproject.toml  regression_suite.py  requirements.txt  test.py
pro/cases/: fetch_cases.json
src/web_search/: cli.py  config.py  curl_fallback.py  errors.py  fetch_workflow.py  github_tools.py  guide.py  logger.py  prompts.py  runtime.py  search_workflow.py  server.py  service_support.py  sources.py  utils.py
src/web_search/providers/: base.py  grok.py  tavily.py
tests/: test_api_compat.py  test_cli.py  test_guide_mcp.py  test_restored_modules.py  test_search_prompt.py  test_web_search.py
(+121 files in other folders)
